@@ -2,6 +2,7 @@
  - fix: allow resuming when upload fails (#3)
  - fix: start even if DCOR is down
  - fix: do not display mean upload rate during upload
+ - enh: verify resource uploads via SHA256 sum (#7)
  - enh: fetch license list directly from server
  - enh: functionalize action buttons in upload
  - enh: increase verbosity of CKANAPI
